# privatenotes-tomboyaddin

./: .gitignore  BUILDING_ON_LINUX.txt  LocalTestRun.testrunconfig  Tomboy.csproj  Tomboy.csproj.bak  Tomboy.sln  configure.in  copyDlls.bat
Setup/: Files.wxs  Setup.wixproj
Tomboy/Addins/: .gitignore  Makefile.am
Tomboy/Addins/Backlinks/: Backlinks-mac.csproj  Backlinks.csproj  Backlinks.pidb
Tomboy/Addins/Bugzilla/: Bugzilla-mac.csproj  Bugzilla.csproj  Bugzilla.pidb
Tomboy/Addins/EncryptedFileSystemSyncService/: EncryptedFileSystemSyncServiceAddin.cs
Tomboy/Addins/ExportToHtml/: ExportToHtml.addin.xml  ExportToHtml.csproj  ExportToHtml.pidb
Tomboy/Addins/FileSystemSyncService/: FileSystemSyncService.csproj  FileSystemSyncService.pidb
Tomboy/Addins/FixedWidth/: FixedWidth-mac.csproj  FixedWidth.csproj  FixedWidth.pidb
Tomboy/Addins/InsertTimestamp/: InsertTimestamp-mac.csproj  InsertTimestamp.csproj  InsertTimestamp.pidb
Tomboy/Addins/NoteDirectoryWatcher/: NoteDirectoryWatcher.pidb
Tomboy/Addins/NoteOfTheDay/: NoteOfTheDay-mac.csproj  NoteOfTheDay.csproj  NoteOfTheDay.pidb
Tomboy/Addins/PrintNotes/: PrintNotes-mac.csproj  PrintNotes.csproj  PrintNotes.pidb
Tomboy/Addins/PrivateNotesAddin/: AddinPreferences.cs  AddinPreferencesFactory.cs  CryptoLayer.cs  EncryptedWebdavSyncServer.cs  EncryptedWebdavSyncServiceAddin.cs  Makefile.am  PrivateNotes.addin.xml  PrivateNotes.addin.xml_default  PrivateNotes.addin.xml_noshares  PrivateNotes.csproj  PrivateNotes.csproj.bak  PrivateNotes.csproj_default  PrivateNotes.csproj_noshares  PrivateNotesWebDavShareProvider.cs  Program.cs  SecureSharingFactory.cs  ShareNoteAddin.cs  ShareProvider.cs  ShareSync.cs  SharingAppAddin.cs  Statistics.cs  TextInput.cs  Util.cs  WebDAVClient.cs  WebDAVInterface.cs  WebDAVShareSync.cs  sharesOff.bat  sharesOn.bat
Tomboy/Addins/PrivateNotesAddin/Infinote/: Authenticator.cs  Communicator.cs  TomboyNoteProvider.cs  XmppAddressProvider.cs
Tomboy/Addins/PrivateNotesAddin/cryptScheme/: AddressBook.cs  CryptoScheme.cs
Tomboy/Addins/PrivateNotesAddin/gui/: ItemSelector.cs  LiveEditingInfoWindow.cs  MultiButtonCopySelector.cs  MultiButtonPartnerSelector.cs  MultiButtonSelector.cs  PasswordEntry.cs  TextInput.cs
Tomboy/Addins/PrivateNotesAddin/libs/: GETLIBS.sh  GETNEW.bat
Tomboy/Addins/PrivateNotesAddin/local/: EncryptedFileSystemSyncServer.cs  SecurityWrapper.cs
Tomboy/Addins/TestProject/: CryptoFileFormatTests.cs  TestProject.csproj  UtilTests.cs
Tomboy/Addins/Underline/: Underline.pidb
(+14 files in other folders)
