SUBDIRS =				\
	Backlinks			\
	Bugzilla			\
	Evolution		\
	ExportToHtml			\
	FileSystemSyncService	\
	FixedWidth			\
	GalagoPresence		\
	InsertTimestamp		\
	NoteOfTheDay		\
	PrintNotes			\
	PrivateNotes		\
	RemoveBrokenLinks	\
	Sketching			\
	SshSyncService		\
	StickyNoteImport	\
	Tasque			\
	NoteDirectoryWatcher			\
	Underline		\
	WebDavSyncService			\
	WebSyncService

